--- a/src/App.css
+++ b/src/App.css
@@ -113,6 +113,10 @@ h1 {
   border-radius: 4px;
   cursor: pointer;
 }
+.tasks .task span:first-child {
+  background-color: green;
+  margin-right: 10px;
+}
 .footer {
   margin-top: 30px;
   display: flex;
